# infrastructure

./: .gitignore  CLAUDE.md  LICENSE  renovate.json
ansible/: Makefile  README.md  ansible.cfg  inventory.yaml  pyproject.toml  requirements.yml
ansible/group_vars/all/: all.yaml
ansible/playbooks/: init.yml  nas.yml  run.yml  vpn.yml
ansible/playbooks/roles/k3s_init/tasks/: main.yml  nfs.yml
ansible/playbooks/roles/nas_init/tasks/: groups.yml  main.yml  nfs.yml  users.yml
ansible/playbooks/roles/shared_init/tasks/: groups.yml  main.yml  update_apt.yml  users.yml
ansible/playbooks/roles/vpn_client/tasks/templates/: wg0.conf.j2
ansible/playbooks/roles/vpn_client_keys/tasks/: main.yml
ansible/playbooks/roles/vpn_server/tasks/templates/: wg0.conf.j2
ansible/roles/init/tasks/: groups.yml  users.yml
ansible/roles/vpn_client/tasks/: main.yml
ansible/roles/vpn_client/tasks/templates/: wg0.conf.j2
ansible/roles/vpn_client_keys/tasks/: main.yml
ansible/roles/vpn_server/tasks/: main.yml
ansible/roles/vpn_server/tasks/templates/: wg0.conf.j2
k3s/: helmfile.yaml  traefik-legacy-services.yaml
nas/compose/: backup.docker-compose.yml  cloudflared.docker-compose.yml  cron.docker-compose.yml  heimdall.docker-compose.yml  homeassistant.docker-compose.yml  immich.docker-compose.yml  jellyfin.docker-compose.yml  media-download.docker-compose.yml  media-streaming.docker-compose.yml  monitoring.docker-compose.yml  paperless-ngx.docker-compose.yml  pihole.docker-compose.yml  plex.docker-compose.yml  proxy.docker-compose.yml  (+2 more)
utils/: seal-secret.sh
(+92 files in other folders)
