[tool.poetry]
name = "server-ansible"
version = "0.1.0"
description = ""
authors = ["André Roggeri Campos"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^11.3.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
